<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".byMoYear">

    <TextView
        android:id="@+id/txt_h_byMoYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_h_byMoYear"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.099" />


    <EditText
        android:id="@+id/tyTxt_year"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:autofillHints="Type Year"
        android:digits="0123456789"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.249"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/tyTxt_mo"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:autofillHints="Type Month"
        android:digits="0123456789"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.249"
        tools:ignore="LabelFor" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_moYearFind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_round"
        android:backgroundTint="@color/black"
        android:text="@string/txt_btn_byMoYearFind"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.248" />


    <androidx.cardview.widget.CardView
        android:id="@+id/card_shd_c_moYear"
        android:layout_width="300dp"
        android:layout_height="425dp"
        app:cardCornerRadius="50dp"
        app:cardElevation="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tyTxt_mo">


        <TextView
            android:id="@+id/txt_c_moYear"
            android:text="@string/txt_c_moYear"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_width="309dp"
            android:layout_height="435dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
             />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="147dp"
        android:layout_height="38dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/button_round"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>